--- a/about-us-2.html
+++ b/about-us-2.html
@@ -351,6 +351,8 @@
                     </div>
                 </div>
             </section>
+
+
             <section class="project-count-area">
                 <div class="container">
                     <div class="row">
@@ -487,7 +489,7 @@
                                     <p>
                                         <span>Copyright</span>
                                         <span class="copy-icon"><i class="far fa-copyright"></i></span>
-                                        <span>2023 by FrogBID<sup>TM</sup></span>
+                                        <span>2023 by FrogBID</span>
                                     </p>
                                 </li>
                                 <li class="social-icon">
@@ -667,19 +669,19 @@
                                     <div class="swiper gallery-top">
                                         <div class="swiper-wrapper">
                                             <div class="swiper-slide">
-                                                <a href="product-template.html"><img src="img/product/p-1.jpg" class="img-fluid" alt="p-1"></a>
+                                                <a href="#"><img src="img/product/p-1.jpg" class="img-fluid" alt="p-1"></a>
                                             </div>
                                             <div class="swiper-slide">
-                                                <a href="product-template.html"><img src="img/product/p-2.jpg" class="img-fluid" alt="p-2"></a>
+                                                <a href="#"><img src="img/product/p-2.jpg" class="img-fluid" alt="p-2"></a>
                                             </div>
                                             <div class="swiper-slide">
-                                                <a href="product-template.html"><img src="img/product/p-3.jpg" class="img-fluid" alt="p-3"></a>
+                                                <a href="#"><img src="img/product/p-3.jpg" class="img-fluid" alt="p-3"></a>
                                             </div>
                                             <div class="swiper-slide">
-                                                <a href="product-template.html"><img src="img/product/p-4.jpg" class="img-fluid" alt="p-4"></a>
+                                                <a href="#"><img src="img/product/p-4.jpg" class="img-fluid" alt="p-4"></a>
                                             </div>
                                             <div class="swiper-slide">
-                                                <a href="product-template.html"><img src="img/product/p-5.jpg" class="img-fluid" alt="p-5"></a>
+                                                <a href="#"><img src="img/product/p-5.jpg" class="img-fluid" alt="p-5"></a>
                                             </div>
                                         </div>
                                         <div class="swiper-button">
