--- a/bag.html
+++ b/bag.html
@@ -221,15 +221,15 @@
                                             <div class="acc-desk-header">
                                                 <div class="acc-title">
                                                     <span class="user-icon"><i class="feather-user"></i></span>
-                                                    <a href="login-account.html" class="acc-ti">Account</a>
+                                                    <a href="#" class="acc-ti">Account</a>
                                                 </div>
                                                 <div class="acc-title-lg">
-                                                    <a href="login-account.html"><i class="feather-user"></i></a>
+                                                    <a href="#"><i class="feather-user"></i></a>
                                                 </div>
                                             </div>
                                         </li>
                                         <li class="side-wrap wishlist-wrap">
-                                            <a href="wishlist-product.html" class="header-wishlist-btn">
+                                            <a href="#" class="header-wishlist-btn">
                                                 <span class="wishlist-icon"><i class="feather-heart"></i></span>
                                                 <span class="wishlist-title">Wishlist</span>
                                                 <span class="wishlist-counter">5</span>
@@ -307,7 +307,7 @@
                                     <div class="collection-info">
                                         <div class="collection-image">
                                            <!-- <img src="img/collection/b-1.jpg" class="img-fluid" alt="collection-banner-01">-->
-                                            <img src="img/collection/azomvai.jpg" class="img-fluid" alt="collection-banner-01">
+                                            <img src="img/collection/b-1.jpg" class="img-fluid" alt="collection-banner-01">
                                         </div>
                                     </div>
                                     <!-- collection info end -->
@@ -954,7 +954,7 @@
                                     <p>
                                         <span>Copyright</span>
                                         <span class="copy-icon"><i class="far fa-copyright"></i></span>
-                                        <span>2023 by FrogBID<sup>TM</sup></span>
+                                        <span>2023 by FrogBID</span>
                                     </p>
                                 </li>
                                 <li class="social-icon">
@@ -1134,19 +1134,19 @@
                                     <div class="swiper gallery-top">
                                         <div class="swiper-wrapper">
                                             <div class="swiper-slide">
-                                                <a href="product-template.html"><img src="img/product/p-1.jpg" class="img-fluid" alt="p-1"></a>
+                                                <a href="#"><img src="img/product/p-1.jpg" class="img-fluid" alt="p-1"></a>
                                             </div>
                                             <div class="swiper-slide">
-                                                <a href="product-template.html"><img src="img/product/p-2.jpg" class="img-fluid" alt="p-2"></a>
+                                                <a href="#"><img src="img/product/p-2.jpg" class="img-fluid" alt="p-2"></a>
                                             </div>
                                             <div class="swiper-slide">
-                                                <a href="product-template.html"><img src="img/product/p-3.jpg" class="img-fluid" alt="p-3"></a>
+                                                <a href="#"><img src="img/product/p-3.jpg" class="img-fluid" alt="p-3"></a>
                                             </div>
                                             <div class="swiper-slide">
-                                                <a href="product-template.html"><img src="img/product/p-4.jpg" class="img-fluid" alt="p-4"></a>
+                                                <a href="#"><img src="img/product/p-4.jpg" class="img-fluid" alt="p-4"></a>
                                             </div>
                                             <div class="swiper-slide">
-                                                <a href="product-template.html"><img src="img/product/p-5.jpg" class="img-fluid" alt="p-5"></a>
+                                                <a href="#"><img src="img/product/p-5.jpg" class="img-fluid" alt="p-5"></a>
                                             </div>
                                         </div>
                                         <div class="swiper-button">
