--- a/juteandtextiles.html
+++ b/juteandtextiles.html
@@ -957,7 +957,7 @@
                             <p>
                                 <span>Copyright</span>
                                 <span class="copy-icon"><i class="far fa-copyright"></i></span>
-                                <span>2023 by FrogBID<sup>TM</sup></span>
+                                <span>2023 by FrogBID</span>
                             </p>
                         </li>
                         <li class="social-icon">
