--- a/corporategifts.html
+++ b/corporategifts.html
@@ -957,7 +957,7 @@
                             <p>
                                 <span>Copyright</span>
                                 <span class="copy-icon"><i class="far fa-copyright"></i></span>
-                                <span>2023 by FrogBID<sup>TM</sup></span>
+                                <span>2023 by FrogBID</span>
                             </p>
                         </li>
                         <li class="social-icon">
@@ -1137,19 +1137,19 @@
                             <div class="swiper gallery-top">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <a href="product-template.html"><img src="img/product/p-1.jpg" class="img-fluid" alt="p-1"></a>
+                                        <a href="#"><img src="img/product/p-1.jpg" class="img-fluid" alt="p-1"></a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <a href="product-template.html"><img src="img/product/p-2.jpg" class="img-fluid" alt="p-2"></a>
+                                        <a href="#"><img src="img/product/p-2.jpg" class="img-fluid" alt="p-2"></a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <a href="product-template.html"><img src="img/product/p-3.jpg" class="img-fluid" alt="p-3"></a>
+                                        <a href="#"><img src="img/product/p-3.jpg" class="img-fluid" alt="p-3"></a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <a href="product-template.html"><img src="img/product/p-4.jpg" class="img-fluid" alt="p-4"></a>
+                                        <a href="#"><img src="img/product/p-4.jpg" class="img-fluid" alt="p-4"></a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <a href="product-template.html"><img src="img/product/p-5.jpg" class="img-fluid" alt="p-5"></a>
+                                        <a href="#"><img src="img/product/p-5.jpg" class="img-fluid" alt="p-5"></a>
                                     </div>
                                 </div>
                                 <div class="swiper-button">
@@ -1265,7 +1265,7 @@
         <li class="side-wrap wishlist-wrap">
             <div class="wishlist-wrapper">
                 <div class="wish-det">
-                    <a href="wishlist-product.html" class="wishlist-count">
+                    <a href="#" class="wishlist-count">
                         <span class="wishlist-icon"><i class="feather-heart"></i></span>
                         <span class="wishlist-counter">5</span>
                         <span class="header-title">Wishlist</span>
@@ -1286,7 +1286,7 @@
         </li>
         <li class="side-wrap user-wrap">
             <div class="user-wrapper">
-                <a href="login-account.html" class="user-login">
+                <a href="#" class="user-login">
                     <span class="user-icon"><i class="feather-user"></i></span>
                     <span class="header-title">User</span>
                 </a>
