--- a/contact-us-2.html
+++ b/contact-us-2.html
@@ -240,11 +240,6 @@
                             </div>
                             <!-- contact title end -->
                             <!-- contact map start -->
-                            <div class="google-map-area">
-                                <div class="map" id="map">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.568011053952!2d89.55093142595283!3d22.81846552391299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ff91f9f0427857%3A0xf446e13e5c13bc70!2sFrogBid!5e0!3m2!1sen!2sbd!4v1702101452265!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                                </div>
-                            </div>
                             <!-- contact map end -->
                         </div>
                     </div>
@@ -253,74 +248,45 @@
             <section class="form-contact">
                 <div class="container">
                     <div class="row">
-                        <div class="col">
-                            <div class="contact-content">
-                                <!-- contact us from start -->
-                                <div class="contact-detail form-warp">
-                                    <div class="form-title">
-                                        <h6>Drop us message</h6>
-                                    </div>
-                                    <div class="contact-form-list">
-                                        <form method="post">
-                                            <ul class="form-fill">
-                                                <li class="name">
-                                                    <label>Name</label>
-                                                    <input type="text" name="q" autocomplete="name" placeholder="Name">
-                                                </li>
-                                                <li class="email">
-                                                    <label>Email address</label>
-                                                    <input type="email" name="q" autocomplete="email" placeholder="Email address">
-                                                </li>
-                                                <li class="phone number">
-                                                    <label>Phone number</label>
-                                                    <input type="tel" name="q" placeholder="Phone number">
-                                                </li>
-                                                <li class="message phone number">
-                                                    <label>Message</label>
-                                                    <textarea rows="10" placeholder="Message" class="custom-textarea"></textarea>
-                                                </li>
-                                            </ul>
-                                            <div class="contact-submit">
-                                                <button type="submit" class="btn btn-style2">
-                                                <span>Send</span>
-                                                </button>
-                                            </div>
-                                        </form>
+                        <div class="col-lg-8 col-md-6">
+                            <div class="google-map-area">
+                                    <div class="map" id="map">
+                                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.5081384246123!2d89.55065757595291!3d22.820682473830935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ff9006593dd91b%3A0xb57b8657d03e909!2sAmin%20Plaza!5e0!3m2!1sen!2sbd!4v1702452524075!5m2!1sen!2sbd" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                     </div>
                                 </div>
-                                <!-- contact us from start -->
-                                <!-- contact get info. start -->
-                                <div class="contact-detail get-info">
-                                    <div class="form-title">
-                                        <h6>Get in touch</h6>
-                                    </div>
-                                    <ul class="contact-info-list">
-                                        <li class="ftcon-li">
-                                            <span class="con-icon"><i class="bi bi-geo"></i></span>
-                                            <span class="con-add">
+                        </div>
+
+
+                        <div class="col-lg-4 col-md-6" style="padding-left: 30px;">
+                            <div class="contact-detail get-info">
+                                <div class="form-title">
+                                    <h3 class="pb-5 pt-5">Get in touch</h3>
+                                </div>
+                                <ul class="contact-info-list">
+                                    <li class="ftcon-li">
+                                        <span class="con-icon"><i class="bi bi-geo"></i></span>
+                                        <span class="con-add">
                                                 <span>17, 5th Floor, R. Amin Trade Centre</span>
                                                 <span>KDA Ave, Khulna 9100</span>
                                             </span>
-                                        </li>
-                                        <li class="ftcon-li">
-                                            <span class="con-icon"><i class="bi bi-telephone"></i></span>
-                                            <div class="contact-block">
-                                                <a href="tel:+8801729277765" class="con-add">+8801729277765</a>
-                                            </div>
-                                        </li>
-                                        <li class="ftcon-li">
-                                            <span class="con-icon"><i class="bi bi-envelope"></i></span>
-                                            <div class="contact-block">
-                                                <a href="mailto:contact@frogbid.com" class="con-add">contact@frogbid.com</a>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <!-- contact get info. end -->
+                                    </li>
+                                    <li class="ftcon-li">
+                                        <span class="con-icon"><i class="bi bi-telephone"></i></span>
+                                        <div class="contact-block">
+                                            <a href="tel:+8801729277765" class="con-add">+8801729277765</a>
+                                        </div>
+                                    </li>
+                                    <li class="ftcon-li">
+                                        <span class="con-icon"><i class="bi bi-envelope"></i></span>
+                                        <div class="contact-block">
+                                            <a href="mailto:contact@frogbid.com" class="con-add">contact@frogbid.com</a>
+                                        </div>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
-                </div>
+                        </div>
             </section>
         </main>
         <!-- main section end-->
