--- a/index.html
+++ b/index.html
@@ -701,98 +701,9 @@
                 </div>
             </section>
             <!-- testimonial end -->
-            <!-- blog-wrap start -->
-            <section class="blog-wrap section-ptb">
-                <div class="container">
-                    <div class="row">
-                        <div class="col">
-                            <ul class="grid-wrap">
-                                <li class="grid-wrapper title-wrapper">
-                                    <div class="section-title">
-                                        <span class="sub-title">OUR BEGGEST STORY</span>
-                                        <h2>Latest news &amp; blog</h2>
-                                        <p>There are many variations of passages of is available, but the majority have suffered are alteration in some form !</p>
-                                    </div>
-                                    <div class="swiper-buttons">
-                                        <button class="swiper-prev"><i class=" feather-arrow-left"></i></button>
-                                        <button class="swiper-next"><i class=" feather-arrow-right"></i></button>
-                                    </div>
-                                </li>
-                                <li class="grid-wrapper slider-wrapper">
-                                    <div class="blog-slider swiper" id="blog-template">
-                                        <div class="swiper-wrapper">
-                                            <div class="swiper-slide">
-                                                <div class="blog-post">
-                                                    <div class="blog-main-img">
-                                                        <a href="#" class="blog-img">
-                                                            <img src="img/blog/WFTO-BLog1.jpg" class="img-fluid" alt="backery-blog-1-1">
-                                                            <span class="blog-icon"><i class="bi bi-link-45deg"></i></span>
-                                                        </a>
-                                                    </div>
-                                                    <div class="blog-post-content">
-                                                        <span class="date-time">21 September, 2021</span>
-                                                        <h6 class="blog-title">
-                                                        <a href="#">Leatherina awarded Guaranteed Membership of WFTO</a>
-                                                        </h6>
-                                                        <p class="blog-desc">Leatherina Ltd was awarded guaranteed membership of the World Fair Trade Organisation (WFTO) in March 2021.</p>
-                                                        <a href="#" class="read-btn btn btn-style2">
-                                                            <span>Read more</span>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="swiper-slide">
-                                                <div class="blog-post">
-                                                    <div class="blog-main-img">
-                                                        <a href="#" class="blog-img">
-                                                            <img src="img/blog/Blog-18-09-2021-thamble.jpg" class="img-fluid" alt="backery-blog-1-2">
-                                                            <span class="blog-icon"><i class="bi bi-link-45deg"></i></span>
-                                                        </a>
-                                                    </div>
-                                                    <div class="blog-post-content">
-                                                        <span class="date-time">17 September, 2021</span>
-                                                        <h6 class="blog-title">
-                                                        <a href="#">THERE IS NO CLIMATE JUSTICE WITHOUT FAIR TRADE</a>
-                                                        </h6>
-                                                        <p class="blog-desc">The international community must confront trade injustice, enforce transparency and accountability ...</p>
-                                                        <a href="#" class="read-btn btn btn-style2">
-                                                            <span>Read more</span>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="swiper-slide">
-                                                <div class="blog-post">
-                                                    <div class="blog-main-img">
-                                                        <a href="#" class="blog-img">
-                                                            <img src="img/blog/Blog-16-09-2021-thamble.jpg" class="img-fluid" alt="backery-blog-1-3">
-                                                            <span class="blog-icon"><i class="bi bi-link-45deg"></i></span>
-                                                        </a>
-                                                    </div>
-                                                    <div class="blog-post-content">
-                                                        <span class="date-time">16 September, 2021</span>
-                                                        <h6 class="blog-title">
-                                                        <a href="#">IMPACT OF COVID-19 PANDEMIC ON LEATHER AND FOOTWEAR SMES</a>
-                                                        </h6>
-                                                        <p class="blog-desc">The leather industry is the second largest earner of foreign currencies of Bangladesh after RMG.</p>
-                                                        <a href="#" class="read-btn btn btn-style2">
-                                                            <span>Read more</span>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- blog-wrap end -->
         </main>
         <footer>
-            <div class="footer-top-area section-ptb">
+            <div class="footer-top-area section-ptb" style="background-color: #ffffff;">
                 <div class="container">
                     <div class="row">
                         <div class="col">
@@ -862,7 +773,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-bottom-area">
+            <div class="footer-bottom-area"style="padding-top: 30px;padding-bottom: 30px;">
                 <div class="container">
                     <div class="row">
                         <div class="col">
